Change keyword list to set to match intention